and fixed the right align in the toggle block :)

--- a/src/app/components/joint-edit-panel/joint-edit-panel.component.scss
+++ b/src/app/components/joint-edit-panel/joint-edit-panel.component.scss
@@ -28,7 +28,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: flex-start;
   overflow-y: visible;
 }
 /*
